Improve some CSS on several page. Add APP Icon for Android device.

--- a/src/app/app/basic-call-procedure/components/confirm-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/confirm-collection.component.html
@@ -15,7 +15,7 @@
         <div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-60 padding-left-5 grey'>Amount Receivables</div>
+					<div class='cell width-60 padding-left-10 grey'>Amount Receivables</div>
 				</div>
 			</div>
 			<div class='cell'>
@@ -28,7 +28,7 @@
 		<div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-60 padding-left-5 grey'>Collection Amount</div>
+					<div class='cell width-60 padding-left-10 grey'>Collection Amount</div>
 				</div>
 			</div>
 			<div class='cell'>
@@ -41,7 +41,7 @@
 		<div class="container">
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-60 padding-left-5 grey'>Balance</div>
+					<div class='cell width-60 padding-left-10 grey'>Balance</div>
 				</div>
 			</div>
 			<div class='cell'>
@@ -145,7 +145,7 @@
 
 	<div class="item-container no-padding-item-container">
 	    <div class="container">
-	    	<div class='cell vertical serenade'>
+	    	<div class='cell vertical blue-vertical'>
             	<div class='vertical-text'>SELF</div>
             </div>
 	        <div class='cell'>               
