--- a/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
@@ -7,8 +7,7 @@
     </div>
 
 <div class="container-body">
-    <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'In Progress'})"> -->
-    <div class="item-container" (click)="gotoAnotherPage()">
+    <div class="item-container" (click)="gotoAnotherPageHC()">
         <div class="container">
             <div class='cell width-10 padding-left-5'><div class="sequence green">1</div></div>
             <div class='cell'>
@@ -24,8 +23,8 @@
             <div class='cell width-10 arrow-right'></div>
         </div>
     </div>
-    <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'Not Visited'})"> -->
-    <div class="item-container" (click)="gotoAnotherPage()">
+
+    <div class="item-container" (click)="gotoAnotherPageHC()">
         <div class="container">
             <div class='cell width-10 padding-left-5'><div class="sequence green">2</div></div>
             <div class='cell'>
@@ -41,10 +40,10 @@
             <div class='cell width-10 arrow-right'></div>
         </div>
     </div>
-    <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'Visited'})"> -->
-    <div class="item-container" (click)="gotoAnotherPage()">
+
+    <div class="item-container" (click)="gotoAnotherPageHC()">
         <div class="container">
-            <div class='cell width-10 padding-left-5'><div class="sequence vivid-pink">3</div></div>
+            <div class='cell width-10 padding-left-5'><div class="sequence blue-smart">3</div></div>
             <div class='cell'>
                 <div class='container'><div class='cell width-40 padding-left-5'>Rose Cell</div></div>
                 <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
