--- a/src/app/app/my-transaction/components/hc-accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/hc-accounts-receivables.component.html
@@ -77,7 +77,7 @@
 	</div>
 	<div class="item-container no-padding-item-container">
 	    <div class="container">
-	    	<div class='cell vertical serenade'>
+	    	<div class='cell vertical blue-vertical'>
             	<div class='vertical-text'>SELF</div>
             </div>
 	        <div class='cell'>
@@ -100,7 +100,7 @@
 	</div>
 	<div class="item-container no-padding-item-container">
 	    <div class="container">
-	    	<div class='cell vertical serenade'>
+	    	<div class='cell vertical blue-vertical'>
             	<div class='vertical-text'>SELF</div>
             </div>
 	        <div class='cell'>
