--- a/src/app/app/my-transaction/components/hc-retailer-route.component.html
+++ b/src/app/app/my-transaction/components/hc-retailer-route.component.html
@@ -26,7 +26,7 @@
 
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell width-20 padding-left-5'><div class="profpic pink">G</div></div>
+        	<div class='cell width-20 padding-left-5'><div class="profpic turquoise">G</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell width-80 padding-left-5 bold green'>#1</div>
@@ -45,7 +45,7 @@
     </div>
      <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell width-20 padding-left-5'><div class="profpic purple">R</div></div>
+        	<div class='cell width-20 padding-left-5'><div class="profpic soft-red">R</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell width-80 padding-left-5 bold green'>#2</div>
@@ -64,7 +64,7 @@
     </div>
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell width-20 padding-left-5'><div class="profpic pink">B</div></div>
+        	<div class='cell width-20 padding-left-5'><div class="profpic soft-blue">B</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell width-80 padding-left-5 bold green'>#3</div>
@@ -83,7 +83,7 @@
     </div>
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell width-20 padding-left-5'><div class="profpic purple">L</div></div>
+        	<div class='cell width-20 padding-left-5'><div class="profpic yellow-sun">L</div></div>
         	<div class='cell'>
         		<div class='container'>
         			<div class='cell width-80 padding-left-5 bold green'>#4</div>
