--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -122,14 +122,13 @@ END OF CHECKBOX
 
             
 // PLEASE PUT COLOR HERE
-&.dark-sea-green    { color: $dark-sea-green; }
 &.vivid-pink        { color: $vivid-pink; }
 &.gainsboro         { color: $gainsboro; }
 &.grey              { color: $grey; }
 &.black             { color: $black; }
 &.green             { color: $apple; }
-&.deep-cyan         { color: $deep-cyan; }
 &.red               { color: $red; }
+&.blue-smart        { color: $blue-smart; }
 
 
 /*
@@ -717,10 +716,12 @@ GRID - TABLE CELL
                     transform: rotate(-90deg);
                     text-align: center; 
                     font-size: 3vw;
-                    font-weight: bold;
+                    color: black;
+                    font-weight: 600;
                 }
                 &.sulu { background-color: $sulu; }
-                &.serenade { background-color: $serenade; }
+                &.blue-vertical { background-color: $blue-vertical; }
+                // &.serenade { background-color: $serenade; }
             }
 
  
@@ -732,15 +733,28 @@ GRID - TABLE CELL
                 text-align: center;
                 line-height: 18vw;
                 font-size: 10vw;
-                color : $apple;
-                border: 1px solid $gainsboro;
+                color : $white;
+                border: 1px solid $white;
 
-                &.pink {
-                    background-color : $serenade;
+                &.turquoise {
+                    background-color : $turquoise;
                 }
-                &.purple {
-                    background-color : $violetish-white;
+                &.soft-red {
+                    background-color : $soft-red;
                 }
+                &.soft-blue {
+                    background-color : $soft-blue;
+                }
+                &.yellow-sun {
+                    background-color : $yellow-sun;
+                }
+
+                // &.pink {
+                //     background-color : $serenade;
+                // }
+                // &.purple {
+                //     background-color : $violetish-white;
+                // }
             }
 
             .sequence {
@@ -755,8 +769,11 @@ GRID - TABLE CELL
                 &.green {
                     background-color : $apple;
                 }
-                &.vivid-pink {
-                    background-color : $vivid-pink;
+                // &.vivid-pink {
+                //     background-color : $vivid-pink;
+                // }
+                &.blue-smart { 
+                    background-color: $blue-smart; 
                 }
             }
         }
