--- a/src/app/app/basic-call-procedure/components/hc-add-edit-load-transfer.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-add-edit-load-transfer.component.html
@@ -70,7 +70,7 @@
 
     <div class='no-divider'>
         <div class='button' id='save'>
-            <div class='button-identifier' (click)="addLoadTransfer()">CONFIRM</div>
+            <div class='button-identifier' (click)="addLoadTransferHC()">CONFIRM</div>
         </div>
     </div>
 </div>    
