--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -71,15 +71,21 @@ $radical-red: #F03566;
 $sugar-cane: #EEEEEC;
 
 
+//blue color
+$blue-smart : #009CDE;
+$blue-vertical : #8FDFF8;
+//profpic color (retailer route)
+$turquoise : #1AC0A0;
+$soft-red : #E95D6A;
+$soft-blue : #729FCF;
+$yellow-sun : #FFC305;
+
 
 //all-background
 $apple : #62BB47;
 $white : #FFF;
 $footer-background:#F5f5f5;
-//no-divider-button, double-divider-button
-$dark-sea-green : #00C2BA;
-//sub-main-menu
-$dark-cyan : #00989B;
+
 //text content
 $black : #000000;
 //text basic-call-procedure
@@ -90,8 +96,6 @@ $border-line : #BFBFBF;
 
 $sulu: #C0E773;
 
-//header
-$deep-cyan : #007879;
 
 $azure-white : #DCE6F2;
 $iris-blue : #01BABF;
@@ -100,8 +104,6 @@ $white-smoke : #F2F2F2;
 //background sub item
 $whisper : #EEEEEE;
 
-//
-$light-grayish-blue : #DCE6F2;
 $vivid-pink : #ED135B;
 
 $gainsboro : #D9D9D9;
