Integrate with backend, close-day remittance

--- a/src/app/app/close-day/components/collection.component.html
+++ b/src/app/app/close-day/components/collection.component.html
@@ -178,7 +178,7 @@
 	        <div class='cell'>
                 <!-- <div class='container'><div class='cell width-40 align-right'></div></div> -->
                 <div class='container'>
-                	<div class='cell width-40 align-right green'>P 8,000</div>
+                	<div class='cell width-40 align-right green'>P {{getTotalRemittance() | number}}</div>
                 </div>
 	        </div>
 	        <div class='cell width-10 arrow-right'>
