--- a/src/app/app/basic-call-procedure/components/add-edit-load-transfer.component.html
+++ b/src/app/app/basic-call-procedure/components/add-edit-load-transfer.component.html
@@ -30,7 +30,7 @@
                         <option *ngFor='#min of vRetailerMinList' id={{min.retailerMIN}} value={{min.retailerMIN}}>{{min.retailerMIN}}</option>
                     </select>
                 </div></div>
-                <div class='container'><div class='cell width-60 padding-right-5 align-right grey'>P {{vSuggestedOrder}}</div></div>
+                <div class='container'><div class='cell width-60 padding-right-5 align-right grey' [ngClass]="{'red': (vSuggestedOrder < 0)}">P {{vSuggestedOrder | number}}</div></div>
                 <div class='container'><div class='cell width-60 padding-right-5 padding-left-5 align-right'><input class='width-100' #inputLoad (keyup)='setInputLoadAmount(inputLoad.value)' id="load_amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
             </div>
         </div>
